<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">Calculate</string>
    <string name="fragment_calculate2">fragment_calculate2</string>
    <string name="Calculate" />
    <string name="count">Посчитать</string>
    <string name="lab5_fragment">lab5_fragment</string>
    <string name="communicate">Communicate</string>
    <string name="sensors">Sensors</string>
    <string name="browser">Browser</string>
    <string name="make_a_photo">Make a photo</string>
    <string name="make_a_record">Make_a_record</string>
</resources>
