<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.saidova.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.saidova.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.saidova.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ru.mirea.saidova.mireaproject.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ru.mirea.saidova.mireaproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ru.mirea.saidova.mireaproject.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.saidova.mireaproject.BrowserFragment"
        android:label="fragment_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_calculate"
        android:name="ru.mirea.saidova.mireaproject.CalculateFragment"
        android:label="@string/Calculate"
        tools:layout="@layout/fragment_calculate2" />
    <fragment
        android:id="@+id/nav_photofragm"
        android:name="ru.mirea.saidova.mireaproject.nav_photofragm"
        android:label="fragment_nav_photofragm"
        tools:layout="@layout/fragment_nav_photofragm" />
    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.saidova.mireaproject.nav_sensor"
        android:label="fragment_nav_sensor"
        tools:layout="@layout/fragment_nav_sensor" />
    <fragment
        android:id="@+id/nav_recorder"
        android:name="ru.mirea.saidova.mireaproject.nav_recorder"
        android:label="fragment_nav_recorder"
        tools:layout="@layout/fragment_nav_recorder" />
</navigation>